--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-dropdown": "^1.9.2",
     "react-image-gallery": "^1.2.7",
     "react-owl-carousel": "^2.3.3",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
