--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-image-gallery": "^1.2.7",
+    "react-odometerjs": "^2.1.2",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
